sonarqube-dep.yml
# sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:9.9-community
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: sonarqube-storage
              mountPath: /opt/sonarqube/data
      volumes:
        - name: sonarqube-storage
          persistentVolumeClaim:
            claimName: pvc-sonar
