sonarqube-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
